Fix stuck pixels (my own fault)

--- a/assets/css/collaborative_canvas.css
+++ b/assets/css/collaborative_canvas.css
@@ -162,7 +162,7 @@ span.selected {
 .history-93 { animation: history-frame-93 100s infinite; }
 .history-94 { animation: history-frame-94 100s infinite; }
 .history-95 { animation: history-frame-95 100s infinite; }
-.history-96 { animation: history-frame-50 100s infinite; animation-delay: 4s; }
+.history-96 { animation: history-frame-96 100s infinite; }
 .history-97 { animation: history-frame-97 100s infinite; }
 .history-98 { animation: history-frame-98 100s infinite; }
 .history-99 { animation: history-frame-99 100s infinite; }
@@ -299,7 +299,7 @@ span.selected {
 .history-230 { animation: history-frame-230 100s infinite; }
 .history-231 { animation: history-frame-231 100s infinite; }
 .history-232 { animation: history-frame-232 100s infinite; }
-.history-233 { animation: history-frame-50 100s infinite; animation-delay: 24s;}
+.history-233 { animation: history-frame-233 100s infinite; }
 .history-234 { animation: history-frame-234 100s infinite; }
 .history-235 { animation: history-frame-235 100s infinite; }
 .history-236 { animation: history-frame-236 100s infinite; }
